@@ -69,8 +69,13 @@ class WHCgiPost
   void sendUdpPacket(const QByteArray &data,uint16_t port);
   void sendAddUserCommand(const QString &htpasswd_file,const QString &username,
 			  const QString &password) const;
+  void sendAddUser2Command(const QString &htpasswd_file,const QString &realm,
+			   const QString &username,
+			   const QString &password) const;
   void sendDeleteUserCommand(const QString &htpasswd_file,
 			     const QString &username);
+  void sendDeleteUser2Command(const QString &htpasswd_file,const QString &realm,
+			      const QString &username);
   void sendIpCommand(unsigned iface_num,const QHostAddress &addr,
 		     const QHostAddress &mask,
 		     const QHostAddress &gw,const QHostAddress &dns1,
